feat: add css and image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bekberov's CV</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -14,8 +15,9 @@
       </p>
     </header>
     <main>
-      <div>
+      <div class="summary">
         <h3>Full Name: Yerassyl Bekberov</h3>
+        <img height="200" src="circle-cropped.png" alt="Yerassyl Bekberov" />
         <h2>Summary</h2>
         <h4>2020, remember? It's not a best year, but it is for me...</h4>
         <p>
@@ -33,7 +35,7 @@
           as building a strong team around with excellent customer satisfaction.
         </p>
       </div>
-      <div>
+      <div class="skills">
         <h2>Skills</h2>
         <details>
           <summary>Front-End Web Development</summary>
@@ -59,7 +61,7 @@
           </p>
         </details>
       </div>
-      <div>
+      <div class="code-example">
         <h2>Projects</h2>
         <nav>
           <a href="https://ye-russell.github.io/cv/" target="_blank"
@@ -103,7 +105,7 @@
             }</code></pre>
         </details>
       </div>
-      <div>
+      <div class="ex-ed">
         <h2>Experience</h2>
         <ul>
           <li>Dec 2020 - current: Self-studying student </li>
