refactor: change the structure of the html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <div class="summary">
         <h3>Full Name: Yerassyl Bekberov</h3>
-        <img height="200" src="circle-cropped.png" alt="Yerassyl Bekberov" />
+        <img height="200" src="circle-cropped.png" alt="Yerassyl-Bekberov" />
         <h2>Summary</h2>
         <h4>2020, remember? It's not a best year, but it is for me...</h4>
         <p>
@@ -124,6 +124,8 @@
           <li>2013-2016: Technician at Baker Hughes International</li>
           <li>2012-2013: Drilling helper at Kazburgas</li>
         </ul>
+      </div>
+      <div class="ex-ed">
         <h2>Education</h2>
         <h4>Currently studying:</h4>
         <ul>
@@ -153,21 +155,25 @@
           <li>
             Sep 2012 - Sep 2015: Satbayev University - Bachelor of Geophysics.
           </li>
-        </ul>
-      </div>
+        </ul></div
+      >
       <h2>English</h2>
       <p>IELTS 6.5 Academic (2017) see above for the courses.</p>
     </main>
     <footer>
-      <h3>Contacts</h3>
-      <p
-        >email:
-        <a href="mailto:bekberata@gmail.com?subject=feedback"
-          >bekberata@gmail.com</a
+      <h2 id="contacts-header">Contacts</h2>
+      <ul>
+        <li class="contacts"
+          >email:
+          <a href="mailto:bekberata@gmail.com?subject=feedback"
+            >bekberata@gmail.com</a
+          ></li
         >
-        | tel: +7 777 65 117 65 | github:
-        <a href="https://github.com/ye-russell">ye-russell</a>
-      </p></footer
+        <li class="contacts">| tel: +7 777 65 117 65 </li>
+        <li class="contacts"
+          >| github: <a href="https://github.com/ye-russell">ye-russell</a></li
+        >
+      </ul></footer
     >
   </body>
 </html>
