feat: add new landing page and move the previous page to additional info

--- a/index.html
+++ b/index.html
@@ -1,166 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bekberov's CV</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/3e90667fb9.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <header>
-    <h1>Ye-Russell</h1>
-    <p>
-      <em>Enthusiast of <strong>Programming</strong></em>
-    </p>
-  </header>
-  <main>
-    <div class="summary">
-      <h3>Full Name: Yerassyl Bekberov</h3>
-      <img height="200" src="circle-cropped.png" alt="Yerassyl-Bekberov" />
-      <h2>Summary</h2>
-      <h4>2020, remember? It's not a best year, but it is for me...</h4>
-      <p>
-        I have decided to switch to software development from my petroleum
-        sphere. My purpose to constantly obtain all needed practical skills
-        for a fully professional software engineer in full-stack development
-        preferably using JavaScript with modern frameworks (React and Node).
-      </p>
-      <h4>Priorities:</h4>
-      <p>
-        Having experience working in an American company and studying at a
-        British university, the main priority is to provide top service for
-        customers all around the globe. Additionally, the constant chase of
-        studying and learning is one of the main focuses from my side as well
-        as building a strong team around with excellent customer satisfaction.
-      </p>
-    </div>
-    <div class="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>
-          <details>
-            <summary>Front-End Web Development</summary>
-            <p>
-              HTML 5, CSS 3, Bootstrap 4, Javascript ES6, Web Design, DOM
-              Manipulation, jQuery, Bash Command Line; Git, GitHub and Version
-              Control.
-            </p>
-          </details>
-        </li>
-        <li>
-          <details>
-            <summary>Backend Web Development</summary>
-            <p>
-              Node.js, NPM, Express.js, EJS, REST, APIs; Databases: SQL, MongoDB,
-              Mongoose, Authentication, Firebase, React.js, React Hooks;
-              Deployment with GitHub Pages, Heroku and MongoDB Atlas.
-            </p>
-          </details>
-        </li>
-        <li>
-          <details>
-            <summary>Other skills</summary>
-            <p>
-              Java (base), Ruby (base), customer service, team player, time
-              management, adaptibility, learning, responsibility, planning.
-            </p>
-          </details>
-        </li>
-      </ul>
-
-
-
-    </div>
-    <div class="code-example">
-      <h2>Projects</h2>
-      <nav>
-        <a href="https://ye-russell.github.io/cv/" target="_blank">CSS My Site</a>
-        |
-        <a href="https://ye-russell.github.io/cv/TinDog-Start-master/index.html" target="_blank">Tindog (Bootstrap)</a>
-        |
-        <a href="https://ye-russell.github.io/cv/Alakol/index.html" target="_blank">Alakol (Web Design)</a>
-        |
-        <a href="https://ye-russell.github.io/cv/Dicee%20Challenge%20-%20Starting%20Files/dicee.html" target="_blank">Dicee! (JS)</a>
-        |
-        <a href="https://ye-russell.github.io/cv/Drum%20Kit%20Starting%20Files/index.html" target="_blank">Drum Kit (DOM)</a>
-      </nav>
-      <details>
-        <summary>Code example</summary>
-        <pre><code>        function factorial(n) {
-             if (n == 0) return 1;
-              var nFactorial = factorial (n - 1) * n;
-              return nFactorial;
-            }</code></pre>
-      </details>
-    </div>
-    <div class="ex-ed">
-      <h2>Experience</h2>
-      <ul>
-        <li>Dec 2020 - current: Self-studying student </li>
-        <li>Sep 2020 - Dec 2020: Project Manager at Satbayev University</li>
-        <li>
-          Jun 2020 - Sep 2020: Senior Specialist at NCSTE (National Centre of
-          Scientific and Technical Evaluation)
-        </li>
-        <li>
-          Jan 2020 - May 2020: Completion Specialist at Baker Hughes
-          International
-        </li>
-        <li>
-          Sep 2019 - Dec 2019: Warehouse Problem Solver at Amazon Knowsley, UK
-        </li>
-        <li>2013-2016: Technician at Baker Hughes International</li>
-        <li>2012-2013: Drilling helper at Kazburgas</li>
-      </ul>
-    </div>
-    <div class="ex-ed">
-      <h2>Education</h2>
-      <h4>Currently studying:</h4>
-      <ul>
-        <li>RS School</li>
-        <li>
-          nFactorial Start (base of Computer Science with the Princetion
-          material using Java) (until 25 March 2021)
-        </li>
-        <li>Open App Academy (JS, Ruby)</li>
-      </ul>
-      <h4>Completed:</h4>
-      <ul>
-        <li>
-          Nov 2020 - Feb 2021: Udemy Full-Stack Web Development Bootcamp with
-          Angela Yu (in English).
-        </li>
-        <li>
-          Sep 2017 - Sep 2019: University of Liverpool - Master of Geoscience.
-        </li>
-        <li>
-          Apr 2017 - Sep 2017: University of Liverpool - English Language
-          Course.
-        </li>
-        <li>
-          Aug 2016 - Jan 2017: British Council - English Language Course.
-        </li>
-        <li>
-          Sep 2012 - Sep 2015: Satbayev University - Bachelor of Geophysics.
-        </li>
-      </ul>
-    </div>
-    <h2>English</h2>
-    <p>IELTS 6.5 Academic (2017) see above for the courses.</p>
-  </main>
-  <footer>
-    <h2 id="contacts-header">Contacts</h2>
-    <ul>
-      <li class="contacts">email:
-        <a href="mailto:bekberata@gmail.com?subject=feedback">bekberata@gmail.com</a>
-      </li>
-      <li class="contacts">| tel: +7 777 65 117 65 </li>
-      <li class="contacts">| github: <a href="https://github.com/ye-russell">ye-russell</a></li>
-    </ul>
-  </footer>
+    <header>
+        <div id="header-wrapper">
+            <img id="img" src="circle-cropped.png" alt="Russell Bekberov">
+            <div id="name">
+                <h1>Russell Bekberov</h1>
+                <p class="occupation" id="occupation">Web Developer</p>
+            </div>
+            <div id="contacts">
+                    <p><i class="contacts-fas fas fa-map-marker-alt"></i>Almaty, Samal-2, 77</p> 
+                    <br>
+                    <p><i class="contacts-fas fas fa-globe"></i><a href="mailto:bekberata@gmail.com?subject=feedback">bekberata@gmail.com</a></p>
+                    <br>
+                    <p><i class="contacts-fas fas fa-phone-alt"></i>+7 777 65 117 65</p>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div id="background-wrapper"><div id="main-wrapper">
+            <div id="left-sections">
+                <section id="profile-info">
+                    <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Profile Info</h2>
+                    <p id="profile-info-p">Having experience in an American company and studying at a British university, the main priority is to provide a top service in the field of Web Development with excellent customer satisfaction.</p>
+                    <a href="/additional-page/index.html"><h4 id="click-on-me">For more information please click on me! </h4></a>
+                </section>
+                <section id="interests">
+                    <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Interests</h2>
+                    <div class="interests-icons">
+                        <span>
+                            <div class="interest-icon">
+                                <i class="fas fa-globe-europe fa-lg"></i>
+                            </div>
+                            <p class="interest-p">Geography</p>
+                        </span>
+                        <span>
+                            <div class="interest-icon">
+                                <i class="fas fa-building fa-lg"></i>
+                            </div>
+                            <p class="interest-p">Modernism</p>
+                        </span>
+                        <span>
+                            <div class="interest-icon">
+                                <i class="far fa-futbol fa-lg"></i>
+                            </div>
+                            <p class="interest-p">Football</p>
+                        </span>
+                    </div>
+                </section>
+                <section id="references">
+                    <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>References</h2>
+                    <ul>
+                        <li>
+                            <div class="bullet">
+                                <svg aria-hidden="true" viewBox="0 0 32 32" focusable="false"><circle stroke="none" cx="16" cy="16" r="20"></circle></svg>
+                              </div>
+                            <p class="li-p">2020.09 - 2020.12
+                                <br>
+                                <a class="li-a" href="https://satbayev.university/en/about" target="_blank">Satbayev University</a>
+                                <br>
+                                Project Manager</p>
+                        </li>
+                        <li>
+                            <div class="bullet">
+                                <svg aria-hidden="true" viewBox="0 0 32 32" focusable="false"><circle stroke="none" cx="16" cy="16" r="20"></circle></svg>
+                              </div>
+                            <p class="li-p">2020.06 - 2020.09
+                                <br>
+                                <a class="li-a" href="https://www.ncste.kz/en/about-company/" target="_blank">NCSTE</a>
+                                <br>
+                                Senior Specialist</p>
+                        </li>
+                        <li>
+                            <div class="bullet">
+                                <svg aria-hidden="true" viewBox="0 0 32 32" focusable="false"><circle stroke="none" cx="16" cy="16" r="20"></circle></svg>
+                              </div>
+                            <p class="li-p">2013 - 2020
+                                <br>
+                                <a class="li-a" href="https://www.bakerhughes.com/company/about-us" target="_blank">Baker Hughes</a>
+                                <br>
+                                Technical Specialist</p>
+                        </li>
+                    </ul>
+                </section>
+                <section id="awards">
+                    <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Awards</h2>
+                        <p class="awards-p">2021 Gold certificate of <em>Princeton</em> based course "Intro to CS" </p>
+                        <br>
+                        <p class="awards-p">2021 Certificate of Completion the <em>Udemy</em> Web Development Bootcamp with Angela Yu</p>
+                        <br>
+                        <p class="awards-p">2019 Master of Science degree from <em>the University of Liverpool</em> </p>
+                </section>
+            </div>
+            <section id="portfolio">
+                <div class="portfolio-wrapper">
+                    <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Porfolio</h2>
+                    <div class="portfolio-figures">
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://rolling-scopes-school.github.io/ye-russell-JSFE2021Q1/wildlife/" target="_blank">
+                            <img class="portfolio-img" src="wildlife.png" alt="Wildlife Project">
+                            <figcaption>
+                                <h3>Wildlife</h3>
+                                <p>HTML and CSS</p>
+                            </figcaption>
+                        </a></figure>
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://rolling-scopes-school.github.io/ye-russell-JSFE2021Q1/virtual-piano/" target="_blank">
+                            <img class="portfolio-img" src="virtual-piano.png" alt="Virtual Piano Project">
+                            <figcaption>
+                                <h3>Virtual Piano</h3>
+                                <p>JavaScript</p>
+                            </figcaption>
+                        </a></figure>
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://peaceful-shore-72566.herokuapp.com/" target="_blank"> 
+                            <img class="portfolio-img" src="task-generator.png" alt="Task Generator Project">
+                            <figcaption>
+                                <h3>Task Generator</h3>
+                                <p>Node JS with Mongoose</p>
+                            </figcaption>
+                        </a></figure>
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://ye-russell.github.io/cv/Drum%20Kit%20Starting%20Files/index.html" target="_blank">
+                            <img class="portfolio-img" src="drum-kit.png" alt="Drum Kit Project">
+                            <figcaption>
+                                <h3>Drum Kit</h3>
+                                <p>JavaScript</p>
+                            </figcaption>
+                        </a></figure>
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://ye-russell.github.io/cv/Simon%20Game%20Challenge%20Starting%20Files/index.html" target="_blank">
+                            <img class="portfolio-img" src="simon-game.png" alt="Simon Game Project">
+                            <figcaption>
+                                <h3>Simon Game</h3>
+                                <p>jQuery</p>
+                            </figcaption>
+                        </a></figure>
+                        <figure class="portfolio-figure"><a class="portfolio-f" href="https://ye-russell.github.io/cv/TinDog-Start-master/index.html" target="_blank">
+                            <img class="portfolio-img" src="tindog.png" alt="Tinder Dog Project">
+                            <figcaption>
+                                <h3>Tinder Dog</h3>
+                                <p>Bootstrap</p>
+                            </figcaption>
+                        </a></figure>
+                  
+                    </div>
+                </div>
+            </section>
+        </div></div>
+        
+    </main>
+    <footer>
+        <div id="footer-wrapper">
+            <p>You can write me on <a href="mailto:bekberata@gmail.com?subject=feedback">bekberata@gmail.com</a> or call +7 777 65 117 65</p></div>
+    </footer>
 </body>
-
 </html>
