refactor: fix the link to add page in main html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <section id="profile-info">
                     <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Profile Info</h2>
                     <p id="profile-info-p">Having experience in an American company and studying at a British university, the main priority is to provide a top service in the field of Web Development with excellent customer satisfaction.</p>
-                    <a href="/additional-page/index.html"><h4 id="click-on-me">For more information please click on me! </h4></a>
+                    <a href="additional-page\index.html"><h4 id="click-on-me">For more information please click on me! </h4></a>
                 </section>
                 <section id="interests">
                     <h2><div class="sections-fas"><i class="fas fa-briefcase fa-xs"></i></div></i>Interests</h2>
